<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ibm.forecast</groupId>
    <artifactId>forecast.root</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <name>IBM Manager Forecast - Forecast Root</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <play2.version>2.6.12</play2.version>
        <scala.version>2.12.4</scala.version>
        <jar.plugin.version>2.6</jar.plugin.version>
        <surefire.plugin.version>2.19.1</surefire.plugin.version>
        <play2.plugin.version>1.0.0-rc3-SNAPSHOT</play2.plugin.version>
        <akka.http.version>10.1.0</akka.http.version>
        <akka.actor.version>2.5.11</akka.actor.version>
        <mybatis.guice.version>3.10</mybatis.guice.version>
        <mybatis.version>3.4.6</mybatis.version>
        <google.guice>4.1.0</google.guice>
        <assertj.core.version>3.6.2</assertj.core.version>
        <awaitility.version>2.0.0</awaitility.version>
        <db2.version>11.1.2</db2.version>
    </properties>

    <licenses>
        <license>
            <name>IBM</name>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <organization>
        <name>IBM</name>
        <url>http://www.ibm.com</url>
    </organization>
    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-http -->
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-http_2.12</artifactId>
                <version>${akka.http.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-actor_2.12</artifactId>
                <version>${akka.actor.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-guice -->
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-guice</artifactId>
                <version>${mybatis.guice.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis</artifactId>
                <version>${mybatis.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-jdbc -->
            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-jdbc_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.inject</groupId>
                <artifactId>guice</artifactId>
                <version>${google.guice}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-guice_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-java_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-logback_2.12</artifactId>
                <version>${play2.version}</version>
                <scope>runtime</scope>
            </dependency>


            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-akka-http-server_2.12</artifactId>
                <version>${play2.version}</version>
                <scope>runtime</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-jdbc-api -->
            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-jdbc-api_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-java-jdbc -->
            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-java-jdbc_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-test_2.12</artifactId>
                <version>${play2.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.core.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.awaitility</groupId>
                <artifactId>awaitility</artifactId>
                <version>${awaitility.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.ibm.db2.jcc/db2jcc4 -->
            <dependency>
                <groupId>com.ibm.db2</groupId>
                <artifactId>db2jcc4</artifactId>
                <version>${db2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.typesafe.play/filters-helpers -->
            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>filters-helpers_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/com.typesafe.play/play-ws -->
            <dependency>
                <groupId>com.typesafe.play</groupId>
                <artifactId>play-ws_2.12</artifactId>
                <version>${play2.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <sourceDirectory>${basedir}/app</sourceDirectory>
        <testSourceDirectory>${basedir}/test</testSourceDirectory>
        <resources>
            <resource>
                <directory>${basedir}/conf</directory>
            </resource>
            <resource>
                <directory>${basedir}/public</directory>
                <targetPath>public</targetPath>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.google.code.play2-maven-plugin</groupId>
                <artifactId>play2-maven-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <mainLang>java</mainLang>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- docker plugin -->
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.20.1</version>
                <configuration>
                    <skip>false</skip>
                    <images>
                        <image>
                            <name>%g/%a:%l</name>
                            <build>
                                <from>openjdk:8-jre-alpine</from>
                                <tags>
                                    <tag>latest</tag>
                                    <tag>${project.version}</tag>
                                </tags>
                                <assembly>
                                    <descriptorRef>artifact-with-dependencies</descriptorRef>
                                </assembly>
                                <entryPoint>
                                    java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -cp '/maven/*'  -Dhttp.address="0.0.0.0" -Dhttp.port="9000"  play.core.server.ProdServerStart
                                </entryPoint>
                            </build>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>